# kursovaya_3

./: README.md  main.py  pyproject.toml
test/: test_utils.py
utils/: class_Operation.py  func.py
